# NativeWindow

./: .gitignore  CMakeLists.txt
artifacts/: native_window_clang.lib  native_window_clang_d.lib  native_window_msvc.lib  native_window_msvc_d.lib
artifacts/NativeWindow/lib/: native_window_clang.lib  native_window_clang_d.lib  native_window_msvc_d.lib
include/NativeWindow/: Window.h  WindowState.h  WindowStyle.h  WindowsInclude.h
include/NativeWindow/Detail/: Resource.h  WindowData.h
include/NativeWindow/Input/: Input.h  InputEnum.h  InputEvent.h
include/NativeWindow/Service/: IService.h  Service.h  ServiceType.h
include/NativeWindow/Service/ImGuiService/: ImGuiOpenGLService.h  ImGuiService.h
include/NativeWindow/Service/ImGuiService/Font/: JetBrainsMonoBold.h  JetBrainsMonoRegular.h  SansProBold.h  SansProRegular.h
include/NativeWindow/Service/ImGuiService/Theme/: Spectrum.h
include/NativeWindow/Service/InputService/: InputEnum.h  InputService.h
include/NativeWindow/Service/InputService/Device/: Key.h  Keyboard.h  Mouse.h
include/NativeWindow/Service/OpenGLService/: OpenGLService.h
include/NativeWindow/Utility/: NonCopyable.h  ScopeGuard.h  String.h
scripts/: packer.bat  packer.py  toolchain.py
src/NativeWindow/: NativeWindowUtility.cpp  NativeWindowUtility.h  Resource.cpp  Window.cpp
src/NativeWindow/Detail/: WindowData.cpp
src/NativeWindow/Input/: Input.cpp  InputEnum.cpp
src/NativeWindow/Service/: Service.cpp
src/NativeWindow/Service/ImGuiService/: ImGuiOpenGLService.cpp  ImGuiService.cpp
src/NativeWindow/Service/ImGuiService/Theme/: Spectrum.cpp
src/NativeWindow/Service/InputService/: InputEnum.cpp  InputService.cpp
src/NativeWindow/Service/InputService/Device/: Keyboard.cpp  Mouse.cpp
src/NativeWindow/Service/OpenGLService/: OpenGLService.cpp
src/NativeWindow/Utility/: String.cpp
test/: NativeWindowTest.cpp  TestCallback.cpp  TestImGuiOpenGL.cpp  TestInputCallback.cpp  TestMessageReceived.cpp  TestWindowCallback.cpp  TestWindowCreate.cpp
